--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ body {
 /* additional */
 
 .additional {
-	margin-top: 102px;
+	margin: 102px 0;
 }
 .additional__title {
 	color: #fff;
@@ -303,7 +303,7 @@ body {
 	font-size: 24px;
 	font-weight: 400;
 	line-height: 145.227%; /* 34.855px */
-	margin: 48px 0 72px 0  ;
+	margin: 48px 0 72px 0;
 }
 
 .additional__row {
@@ -332,4 +332,54 @@ body {
 	font-weight: 400;
 	line-height: 145.227%; /* 20.332px */
 	margin: 226px 0 0 18px;
+}
+
+/* comments */
+
+.comments__title {
+	color: #fff;
+	text-align: center;
+	font-family: Inter;
+	font-size: 72px;
+	font-weight: 900;
+	line-height: 90.767%; /* 65.352px */
+}
+
+.comments__subtitle {
+	color: #fff;
+	text-align: center;
+	font-family: Inter;
+	font-size: 24px;
+	font-weight: 400;
+	line-height: 145.227%; /* 34.855px */
+	margin: 48px 0 71px 0;
+}
+
+.comments__container {
+	display: flex;
+	justify-content: center;
+	gap: 19px;
+}
+
+.comment {
+	width: 382px;
+}
+.comment__ava {
+	margin-bottom: 42px;
+}
+.quote {
+	color: #fff;
+	font-family: Inter;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 169.432%; /* 23.72px */
+	display: flex;
+}
+.quote__author {
+	color: #fff;
+	font-family: Inter;
+	font-size: 14px;
+	font-weight: 900;
+	line-height: 169.432%; /* 23.72px */
+	margin-top: 24px;
 }
