--- a/style.css
+++ b/style.css
@@ -383,3 +383,64 @@ body {
 	line-height: 169.432%; /* 23.72px */
 	margin-top: 24px;
 }
+
+/* cover with trains */
+
+.cover {
+	margin: 102px 0 82px 0;
+	display: flex;
+	justify-content: center;
+}
+
+.cover__title {
+	position: absolute;
+	color: #fffdfd;
+	text-align: center;
+	font-family: Inter;
+	font-size: 72px;
+	font-weight: 900;
+	line-height: 108.92%; /* 78.423px */
+	margin: 274px 0 0 0;
+}
+.cover__subtitle {
+	position: absolute;
+	color: #fff;
+	text-align: center;
+	font-family: Inter;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 145.227%; /* 26.141px */
+	margin: 477px 0 0 0;
+}
+
+/* emblem */
+
+.emblem__wrapper {
+	width: 1184px;
+	margin: 0 auto;
+}
+
+.emblem__title {
+	color: #fff;
+	font-family: Inter;
+	font-size: 42px;
+	font-weight: 900;
+	line-height: 108.92%; /* 45.747px */
+}
+
+.emblem__container {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 82px;
+}
+
+.emblem__text {
+	display: flex;
+	justify-content: center;
+	color: #ccc;
+	font-family: Inter;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 108.92%; /* 26.141px */
+	margin-top: 35px;
+}
