--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ body {
 
 .cover__title {
 	position: absolute;
-	color: #fffdfd;
+	color: #fff;
 	text-align: center;
 	font-family: 'Inter', sans-serif;
 	font-size: 72px;
