fix: error text

--- a/style.css
+++ b/style.css
@@ -497,7 +497,8 @@ body {
 
 /* footer */
 .footer {
-	margin: 160px auto 48px auto;
+	margin: 160px auto 0 auto;
+	padding: 0 0 48px 0;
 	width: 1184px;
 	display: flex;
 	justify-content: space-between;
@@ -523,6 +524,8 @@ body {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 145.227%;
+	    display: flex;
+    align-items: center;
 }
 
 :root {
